Created photo settings model. Moved photo conditions to app settings. Initialized photo settings in startup.

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -9,5 +9,9 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=localhost\\SQLEXPRESS;Initial Catalog=VegaDB;Integrated Security=True"
+  },
+  "PhotoSettings": {
+    "MaxSize": 10485760,
+    "AllowedExtensions": [".jpg", ".jpeg", ".png"]
   }
 }
