--- a/API/API.csproj
+++ b/API/API.csproj
@@ -10,5 +10,6 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.1"/>
     <PackageReference Include="AutoMapper" Version="9.0.0"/>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0"/>
+    <PackageReference Include="System.Drawing.Common" Version="4.7.0"/>
   </ItemGroup>
 </Project>
