--- a/API/API.csproj
+++ b/API/API.csproj
@@ -11,5 +11,6 @@
     <PackageReference Include="AutoMapper" Version="9.0.0"/>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0"/>
     <PackageReference Include="System.Drawing.Common" Version="4.7.0"/>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.1"/>
   </ItemGroup>
 </Project>
