--- a/SPA/package.json
+++ b/SPA/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "@auth0/auth0-spa-js": "^1.6.4",
     "@sentry/browser": "^5.12.1",
     "ngx-toastr": "^11.3.3",
     "rxjs": "~6.4.0",
