Updated to Dotnet 5.0. Fixed nvarchar(max) error. Changed Sqlserver to PostgreSql.

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -8,7 +8,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=localhost\\SQLEXPRESS;Initial Catalog=VegaDB;Integrated Security=True"
+    "DefaultConnection": "Data Source=localhost\\SQLEXPRESS;Initial Catalog=VegaDB;Integrated Security=True",
+    "DefaultConnectionSqlite": "Data Source=Vega.db"
   },
   "PhotoSettings": {
     "MaxSize": 10485760,
